# Robust-U1

./: README.md  app.py  demo.py  pyproject.toml  requirements.txt
inference/: __init__.py  __main__.py  _paths.py  model_setup.py  reasoner.py
modeling/: __init__.py  inference_demo.py  inferencer.py
modeling/data/: data_utils.py
modeling/modeling/: autoencoder.py
modeling/modeling/bagel/: bagel.py  qwen2_navit.py  siglip_navit.py
modeling/modeling/siglip/: convert_siglip_to_hf.py
rewards/: __init__.py  flow_grpo_adapter.py  rewards.py
